--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="scripts/angular.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/angular-strap.min.js"></script>
-
+	<script type="text/javascript" src="scripts/angular-sanitize.min.js"></script>
+	
     <script type="text/javascript" src="scripts/angular-resource.min.js"></script>
     <script type="text/javascript" src="scripts/ui-bootstrap-0.2.0.min.js"></script>
     <script type="text/javascript" src="scripts/ui-bootstrap-tpls-0.2.0.min.js"></script>
