--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -29,12 +29,14 @@
     <script type="text/javascript" src="scripts/angular-strap.min.js"></script>
 	
     <script type="text/javascript" src="scripts/angular-resource.min.js"></script>
+    <script type="text/javascript" src="scripts/angular-cookies.min.js"></script>
     <script type="text/javascript" src="scripts/ui-bootstrap-0.2.0.min.js"></script>
     <script type="text/javascript" src="scripts/ui-bootstrap-tpls-0.2.0.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
 
     <script type="text/javascript" src="scripts/ng-upload.min.js"></script>
 
+	<script type="text/javascript" src="scripts/http-auth-interceptor.js"></script>
     <script type="text/javascript" src="scripts/application.js"></script>
     <script type="text/javascript" src="scripts/controllers.js"></script>
 </body>
