--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -8,14 +8,23 @@
 </head>
 <body data-authentication-directive="" data-ng-controller="MainCtrl">
     <!-- Navigation bar -->
-    <div class="navbar" data-ng-controller="NavBarCtrl" data-bs-navbar="">
+    <div class="navbar" data-ng-controller="navbarController" data-bs-navbar="">
         <div class="navbar-inner">
             <a class="brand" href="#">ElasticSearch Dms Client</a>
             <ul class="nav">
-                <li data-ng-repeat="tab in tabs" data-match-route="{{tab.view}}"><a href="#{{tab.view}}">
-                    {{tab.title}}</a> </li>
+                <li data-ng-repeat="tab in tabs" data-match-route="{{tab.view}}">
+                	<a href="#{{tab.view}}">{{tab.title}}</a>
+                </li>
                 <li ng-show="showLogout" class="divider-vertical"></li>
-                <li ng-show="showLogout"><a href="#logout">Logout</a></li>
+				<li class="dropdown">
+                	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
+                	<ul class="dropdown-menu">
+		                <li data-ng-repeat="tab in adminTabs" data-match-route="{{tab.view}}">
+		                	<a href="#{{tab.view}}">{{tab.title}}</a>
+		                </li>
+                	</ul>
+              	</li>
+				<li ng-show="showLogout"><a href="#logout">Logout</a></li>
             </ul>
         </div>
     </div>
