--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-ng-app="simpleApp">
 <head>
-    <title>Test ElasticSearch Dms Client</title>
+    <title>ElasticSearch Dms Client</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
@@ -33,7 +33,7 @@
         <div id="content" data-ng-view="">
         </div>
         
-		<div id="login-holder" data-ng-include src="'views/login.html'">
+		<div id="login-holder" class="modal hide fade" data-ng-include src="'views/login.html'">
 		</div>
               
     </div>
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="js/ui-bootstrap-0.2.0.min.js"></script>
     <script type="text/javascript" src="js/ui-bootstrap-tpls-0.2.0.min.js"></script>
     <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="js/bootstrap-filestyle-0.1.0.min.js"></script>
 
     <script type="text/javascript" src="js/ng-upload.min.js"></script>
 
