--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -24,7 +24,7 @@
 		                </li>
                 	</ul>
               	</li>
-				<li ng-show="showLogout"><a href="#logout">Logout</a></li>
+				<li ng-show="showLogout"><a data-ng-click="logout()">Logout</a></li>
             </ul>
         </div>
     </div>
