--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+	
+	<link rel="stylesheet" href="css/jquery.fileupload-ui.css" />
+	<!-- CSS adjustments for browsers with JavaScript disabled -->
+	<noscript>
+		<link rel="stylesheet" href="css/jquery.fileupload-ui-noscript.css" />
+	</noscript>
 </head>
 <body data-authentication-directive="" data-ng-controller="MainCtrl">
     <!-- Navigation bar -->
@@ -53,6 +59,21 @@
 
 	<script type="text/javascript" src="js/http-auth-interceptor.js"></script>
     
+	<!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
+	<script type="text/javascript" src="js/vendor/jquery.ui.widget.js"></script>
+	<!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
+	<script type="text/javascript" src="js/jquery.iframe-transport.js"></script>
+	<!-- The basic File Upload plugin -->
+	<script type="text/javascript" src="js/jquery.fileupload.js"></script>
+	<!-- The File Upload processing plugin -->
+	<script type="text/javascript" src="js/jquery.fileupload-process.js"></script>
+	<!-- The File Upload image resize plugin -->
+	<script type="text/javascript" src="js/jquery.fileupload-resize.js"></script>
+	<!-- The File Upload validation plugin -->
+	<script type="text/javascript" src="js/jquery.fileupload-validate.js"></script>
+	<!-- The File Upload Angular JS module -->
+	<script type="text/javascript" src="js/jquery.fileupload-angular.js"></script>
+
     <script type="text/javascript" src="js/application.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
 </body>
