--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html lang="en" data-ng-app="simpleApp">
 <head>
     <title>ElasticSearch Dms Client</title>
+    <link rel="stylesheet" href="css/es-dms-site.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
