Testing on web site and views

--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="css/custom.css" />
 	
 	<link rel="stylesheet" href="css/jquery.fileupload-ui.css" />
 	<!-- CSS adjustments for browsers with JavaScript disabled -->
