Troubleshooting login issue

--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -39,7 +39,7 @@
 	        <div id="content" data-ng-view="">
 	        </div>
 	        
-			<div id="login-holder" class="modal hide fade" data-ng-include src="'views/login.html'">
+			<div id="login-holder" class="modal hide fade" data-ng-include src="'views/authentication/login.html'">
 			</div>
 	              
 	    </div>
