--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -39,8 +39,10 @@
 	        <div id="content" data-ng-view="">
 	        </div>
 	        
-			<div id="login-holder" class="modal hide fade" data-ng-include src="'views/authentication/login.html'">
+			<div id="loginHolder" class="modal hide fade" data-ng-include src="'views/authentication/login.html'">
 			</div>
+
+			<a id="loginButton" ng-show="false" href="#loginHolder" role="button" class="btn btn-primary" data-toggle="modal">Login</a>
 	              
 	    </div>
 	<div class="container">
