Initial implementation for tagging

--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="simpleApp">
+<html lang="en" data-ng-app="esDmsApp">
 <head>
     <title>ElasticSearch Dms Client</title>
     <link rel="stylesheet" href="css/es-dms-site.css" />
