--- a/es-dms-site/src/main/webapp/index.html
+++ b/es-dms-site/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 	                <li data-ng-repeat="tab in tabs" data-match-route="{{tab.view}}">
 	                	<a href="#{{tab.view}}">{{tab.title}}</a>
 	                </li>
-	                <li ng-show="showLogout" class="divider-vertical"></li>
+	                <li data-ng-show="showLogout" class="divider-vertical"></li>
 					<li class="dropdown">
 	                	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration <b class="caret"></b></a>
 	                	<ul class="dropdown-menu">
@@ -49,7 +49,7 @@
 			<div id="loginHolder" class="modal hide fade" data-ng-include src="'views/authentication/login.html'">
 			</div>
 
-			<a id="loginButton" ng-show="false" href="#loginHolder" role="button" class="btn btn-primary" data-toggle="modal">Login</a>
+			<a id="loginButton" data-ng-show="false" href="#loginHolder" role="button" class="btn btn-primary" data-toggle="modal">Login</a>
 	              
 	    </div>
 	    <!--  Danilo start --> 
@@ -65,12 +65,12 @@
     <script type="text/javascript" src="js/angular.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
 	
-    <script type="text/javascript" src="js/angular-resource.min.js"></script>
-    <script type="text/javascript" src="js/angular-cookies.min.js"></script>
-    <script type="text/javascript" src="js/ui-bootstrap-0.3.0.min.js"></script>
-    <script type="text/javascript" src="js/ui-bootstrap-tpls-0.3.0.min.js"></script>
+    <script type="text/javascript" src="js/angular-resource.js"></script>
+    <script type="text/javascript" src="js/angular-cookies.js"></script>
+    <script type="text/javascript" src="js/ui-bootstrap-0.3.0.js"></script>
+    <script type="text/javascript" src="js/ui-bootstrap-tpls-0.3.0.js"></script>
     <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
-    <script type="text/javascript" src="js/bootstrap-filestyle-0.1.0.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap-filestyle-0.1.0.js"></script>
 
     <script type="text/javascript" src="js/ng-upload.min.js"></script>
 
@@ -94,6 +94,6 @@
     <script type="text/javascript" src="js/application.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
     
-    <script type="text/javascript" src="js/custom.js"></script></script>
+    <script type="text/javascript" src="js/custom.js"></script>
 </body>
 </html>
