Fix missing glyphicons

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -13,10 +13,10 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css({.tmp,app}) styles/main.css -->
+        <link rel="stylesheet" href="styles/bootstrap.css">
+        <link rel="stylesheet" href="styles/bootstrap-responsive.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
-		
-		<!--link rel="stylesheet" href="bower_components/blueimp-file-upload/css/jquery.fileupload-ui.css"/ -->
 		
 		<!-- link rel="stylesheet" href="bower_components/angular-ui/build/angular-ui.css"/ -->
 </head>
@@ -32,7 +32,6 @@
 
     <!-- Add your site or application content here -->
     <div ui-view></div>
-	<!-- div data-ng-include="'views/main.html'"></div -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
