Remove unused ui-bootstrap.js

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -54,7 +54,7 @@
 	<!-- script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.js"></script-->
 	<!-- script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script -->
 	<!-- Use SNAPSHOT version to be able to use popover with template -->
-	<script type="text/javascript" src="scripts/vendors/angular-bootstrap/ui-bootstrap-0.5.0-SNAPSHOT.js"></script>
+	<!-- script type="text/javascript" src="scripts/vendors/angular-bootstrap/ui-bootstrap-0.5.0-SNAPSHOT.js"></script -->
 	<script type="text/javascript" src="scripts/vendors/angular-bootstrap/ui-bootstrap-tpls-0.5.0-SNAPSHOT.js"></script>
 	
 	<script type="text/javascript" src="scripts/vendors/angular-ui-router/angular-ui-router.js"></script>
