Add angular-ui-router in bower

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -57,7 +57,7 @@
 	<!-- script type="text/javascript" src="scripts/vendors/angular-bootstrap/ui-bootstrap-0.5.0-SNAPSHOT.js"></script -->
 	<script type="text/javascript" src="scripts/vendors/angular-bootstrap/ui-bootstrap-tpls-0.5.0-SNAPSHOT.js"></script>
 	
-	<script type="text/javascript" src="scripts/vendors/angular-ui-router/angular-ui-router.js"></script>
+	<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 
 	<!-- script type="text/javascript" src="bower_components/ngUpload/ng-upload.js"></script -->
@@ -106,6 +106,7 @@
 	<!-- test accordion -->
 	<script type="text/javascript" src="scripts/controllers/test/accordion.js"></script>
 
+<script src="scripts/services/esdmsAuthenticationService.js"></script>
 	<!-- endbuild -->
 
 </body>
