--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -112,6 +112,7 @@
 
 	<!-- test accordion -->
 	<script type="text/javascript" src="scripts/controllers/test/accordion.js"></script>
+  <script src="scripts/controllers/documents/details.js"></script>
 	<!-- endbuild -->
 
 </body>
