--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -137,6 +137,7 @@
 	<script type="text/javascript"
 		src="scripts/controllers/test/accordion.js"></script>
 	<script src="scripts/controllers/documents/details.js"></script>
+<script src="scripts/directives/esdmsPreview.js"></script>
 	<!-- endbuild -->
 
 </body>
