Add process service api

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -140,6 +140,7 @@
 	<script src="scripts/directives/esdmsPreview.js"></script>
 	<script src="scripts/services/ratingService.js"></script>
 <script src="scripts/controllers/documents/rating.js"></script>
+<script src="scripts/services/processService.js"></script>
 	<!-- endbuild -->
 
 </body>
