--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -89,8 +89,10 @@
 		src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
 
 	<!-- Add ui-select2 -->
+	<!--<script type="text/javascript"
+		src="bower_components/angular-ui-select2/src/select2.js"></script>-->
 	<script type="text/javascript"
-		src="bower_components/angular-ui-select2/src/select2.js"></script>
+		src="scripts/vendors/angular-ui-select2/select2.js"></script>
 
 	<!-- endbuild -->
 
