New esdmsStartProcess directive
- Dummy implementation...

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -143,6 +143,7 @@
 	<script src="scripts/services/ratingService.js"></script>
 <script src="scripts/controllers/documents/rating.js"></script>
 <script src="scripts/services/processService.js"></script>
+<script src="scripts/directives/esdmsStartProcess.js"></script>
 	<!-- endbuild -->
 
 </body>
