Start Process + Messaging Service

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -17,6 +17,7 @@
 <!-- build:css({.tmp,app}) styles/main.css -->
 <link rel="stylesheet" href="styles/bootstrap.css">
 <link rel="stylesheet" href="styles/bootstrap-responsive.css">
+<link rel="stylesheet" href="styles/toaster.css">
 <link rel="stylesheet" href="bower_components/select2/select2.css">
 <link rel="stylesheet" href="styles/main.css">
 <!-- endbuild -->
@@ -92,6 +93,9 @@
 	<script type="text/javascript"
 		src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
 
+	<script type="text/javascript"
+		src="scripts/vendors/angular-toaster/toaster.js"></script>
+
 	<!-- Add ui-select2 -->
 	<!--<script type="text/javascript"
 		src="bower_components/angular-ui-select2/src/select2.js"></script>-->
@@ -147,6 +151,7 @@
 	<script src="scripts/controllers/documents/rating.js"></script>
 	<script src="scripts/services/processService.js"></script>
 	<script src="scripts/directives/esdmsStartProcess.js"></script>
+	<script src="scripts/services/messagingService.js"></script>
 	<!-- endbuild -->
 
 </body>
