--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -90,8 +90,15 @@
 	<script type="text/javascript"
 		src="bower_components/blueimp-file-upload/js/vendor/jquery.ui.widget.js"></script>
 	<!-- The basic File Upload plugin -->
-	<script type="text/javascript"
-		src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
+	<!-- script type="text/javascript"
+		src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script -->
+	
+	<!-- The basic File Upload plugin -->
+	<script src="bower_components/blueimp-file-upload/js/jquery.fileupload.js"></script>
+	<!-- The File Upload processing plugin -->
+	<script src="bower_components/blueimp-file-upload/js/jquery.fileupload-process.js"></script>
+	<!-- The File Upload Angular JS module -->
+	<script src="bower_components/blueimp-file-upload/js/jquery.fileupload-angular.js"></script>
 
 	<script type="text/javascript"
 		src="scripts/vendors/angular-toaster/toaster.js"></script>
