Implement modal preview
- Add awesome font
- Update esdms-preview directive.
- New DocumentPreview controller.

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -19,10 +19,12 @@
 <link rel="stylesheet" href="styles/bootstrap-responsive.css">
 <link rel="stylesheet" href="styles/toaster.css">
 <link rel="stylesheet" href="bower_components/select2/select2.css">
+<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 <link rel="stylesheet" href="styles/main.css">
 <!-- endbuild -->
 
 <!-- link rel="stylesheet" href="bower_components/angular-ui/build/angular-ui.css"/ -->
+<base href="/"></base>
 </head>
 <body ng-app="esDmsSiteApp">
 	<!--[if lt IE 7]>
@@ -153,6 +155,7 @@
 	<!-- test accordion -->
 	<script type="text/javascript" src="scripts/controllers/test/accordion.js"></script>
 	<script src="scripts/controllers/documents/details.js"></script>
+	<script src="scripts/controllers/documents/preview.js"></script>
 	<script src="scripts/directives/esdmsPreview.js"></script>
 	<script src="scripts/services/ratingService.js"></script>
 	<script src="scripts/controllers/documents/rating.js"></script>
