Switch from select2 to ng-tags-input

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -18,8 +18,8 @@
 <link rel="stylesheet" href="styles/bootstrap.css">
 <link rel="stylesheet" href="styles/bootstrap-responsive.css">
 <link rel="stylesheet" href="styles/toaster.css">
-<link rel="stylesheet" href="bower_components/select2/select2.css">
 <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+<link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.css">
 <link rel="stylesheet" href="styles/main.css">
 <!-- endbuild -->
 
@@ -52,9 +52,6 @@
 
 	<script type="text/javascript"
 		src="bower_components/lodash/dist/lodash.js"></script>
-
-	<script type="text/javascript"
-		src="bower_components/select2/select2.js"></script>
 
 	<script type="text/javascript"
 		src="bower_components/angular/angular.js"></script>
@@ -105,11 +102,9 @@
 	<script type="text/javascript"
 		src="scripts/vendors/angular-toaster/toaster.js"></script>
 
-	<!-- Add ui-select2 -->
-	<!--<script type="text/javascript"
-		src="bower_components/angular-ui-select2/src/select2.js"></script>-->
+	<!-- Add ng-tags-input -->
 	<script type="text/javascript"
-		src="scripts/vendors/angular-ui-select2/select2.js"></script>
+		src="bower_components/ng-tags-input/ng-tags-input.js"></script>
 
 	<!-- endbuild -->
 
