New add-version action - Versions are now available from Details view - Change REST actions to match new naming convention

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -54,6 +54,9 @@
 		src="bower_components/lodash/dist/lodash.js"></script>
 
 	<script type="text/javascript"
+			src="bower_components/angularjs-file-upload/angular-file-upload-shim.js"></script>
+
+	<script type="text/javascript"
 		src="bower_components/angular/angular.js"></script>
 
 	<script type="text/javascript"
@@ -77,7 +80,7 @@
 	<script type="text/javascript"
 		src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 
-	<!-- script type="text/javascript" src="bower_components/ngUpload/ng-upload.js"></script -->
+	<script type="text/javascript" src="bower_components/angularjs-file-upload/angular-file-upload.js"></script>
 
 	<script type="text/javascript"
 		src="bower_components/angular-http-auth/src/angular-http-auth.js"></script>
@@ -157,6 +160,7 @@
 	<script src="scripts/services/processService.js"></script>
 	<script src="scripts/directives/esdmsStartProcess.js"></script>
 	<script src="scripts/services/messagingService.js"></script>
+	<script src="scripts/controllers/documents/add-version.js"></script>
 	<!-- endbuild -->
 
 </body>
