New word cloud tagging

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -51,6 +51,9 @@
 	<script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
 
 	<script type="text/javascript"
+		src="bower_components/d3/d3.js"></script>
+
+	<script type="text/javascript"
 		src="bower_components/lodash/dist/lodash.js"></script>
 
 	<script type="text/javascript"
@@ -63,6 +66,9 @@
 		src="bower_components/angular-resource/angular-resource.js"></script>
 	<script type="text/javascript"
 		src="bower_components/angular-cookies/angular-cookies.js"></script>
+
+	<script type="text/javascript"
+		src="scripts/vendors/angular-d3/angular-d3.js"></script>
 
 	<!-- script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.js"></script-->
 	<!-- script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script -->
@@ -134,6 +140,7 @@
 	<script type="text/javascript" src="scripts/services/uploadService.js"></script>
 
 	<!-- test accordion -->
+	<script type="text/javascript" src="scripts/controllers/test/tags.js"></script>
 	<script type="text/javascript" src="scripts/controllers/test/accordion.js"></script>
 	<script src="scripts/controllers/documents/details.js"></script>
 	<script src="scripts/controllers/documents/preview.js"></script>
@@ -144,6 +151,7 @@
 	<script src="scripts/directives/esdmsStartProcess.js"></script>
 	<script src="scripts/services/messagingService.js"></script>
 	<script src="scripts/controllers/documents/add-version.js"></script>
+<script src="scripts/directives/esdmsSearchResult.js"></script>
 	<!-- endbuild -->
 
 </body>
