--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -7,6 +7,7 @@
 <!--<![endif]-->
 <html lang="en">
 <head>
+<base href="/"></base>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title></title>
@@ -20,11 +21,11 @@
 <link rel="stylesheet" href="styles/toaster.css">
 <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.css">
+<!-- <link rel="stylesheet" href="scripts/vendors/ng-tags-input/ng-tags-input.css"> -->
 <link rel="stylesheet" href="styles/main.css">
 <!-- endbuild -->
 
 <!-- link rel="stylesheet" href="bower_components/angular-ui/build/angular-ui.css"/ -->
-<base href="/"></base>
 </head>
 <body ng-app="esDmsSiteApp">
 	<!--[if lt IE 7]>
@@ -101,6 +102,9 @@
 	<script type="text/javascript"
 		src="bower_components/ng-tags-input/ng-tags-input.js"></script>
 
+	<!-- <script type="text/javascript"
+		src="scripts/vendors/ng-tags-input/ng-tags-input.js"></script> -->
+
 	<!-- endbuild -->
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -151,7 +155,7 @@
 	<script src="scripts/directives/esdmsStartProcess.js"></script>
 	<script src="scripts/services/messagingService.js"></script>
 	<script src="scripts/controllers/documents/add-version.js"></script>
-<script src="scripts/directives/esdmsSearchResult.js"></script>
+	<script src="scripts/directives/esdmsSearchResult.js"></script>
 	<!-- endbuild -->
 
 </body>
