Add new search form options: simple and metadata
- metadata provide a simple auto-complete support.

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -159,7 +159,10 @@
 	<script src="scripts/directives/esdmsStartProcess.js"></script>
 	<script src="scripts/services/messagingService.js"></script>
 	<script src="scripts/controllers/documents/add-version.js"></script>
+	<script src="scripts/directives/esdmsSearchForm.js"></script>
 	<script src="scripts/directives/esdmsSearchResult.js"></script>
+	<script src="scripts/directives/esdmsSearchResultHeader.js"></script>
+	<script src="scripts/directives/esdmsFacets.js"></script>
 	<!-- endbuild -->
 
 </body>
