--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -128,6 +128,7 @@
 	<script type="text/javascript"
 		src="scripts/services/documentService.js"></script>
 	<script type="text/javascript" src="scripts/controllers/document.js"></script>
+	<script type="text/javascript" src="scripts/controllers/credits.js"></script>
 	<script type="text/javascript" src="scripts/controllers/search/search.js"></script>
 	<script type="text/javascript" src="scripts/services/searchService.js"></script>
 	<script type="text/javascript" src="scripts/controllers/login.js"></script>
