added togetherJS demo integration
just a very quick integration it should demonstrate collaboration
features

--- a/es-dms-site/yo/app/index.html
+++ b/es-dms-site/yo/app/index.html
@@ -166,6 +166,8 @@
 	<script src="scripts/directives/esdmsSearchResultHeader.js"></script>
 	<script src="scripts/directives/esdmsFacets.js"></script>
 	<!-- endbuild -->
+	
+	<script src="https://togetherjs.com/togetherjs-min.js"></script>
 
 </body>
 </html>
